# pwcc

./: .envrc  .gitignore  Cargo.toml  README.md  driver  flake.nix  rust-toolchain.toml
functional/: Cargo.toml
functional/src/: control_flow.rs  foldable.rs  foldable_mut.rs  functor.rs  lib.rs  semigroup.rs  test.rs  test_foldable.rs  test_functor.rs  test_visit.rs  try_coalesce.rs  try_functor.rs  tuple.rs
functional_macros/: Cargo.toml
functional_macros/src/: emitter.rs  errors.rs  foldable.rs  functor.rs  generics.rs  lib.rs  nodes.rs  options.rs  syntax.rs  try_functor.rs  types.rs
functional_macros/src/nodes/: coherence.rs  lattice.rs  scc.rs
functional_macros/src/traits/: foldable.rs  foldable_mut.rs  functor.rs  mod.rs  try_functor.rs  visit.rs  visit_mut.rs
pwcc/: Cargo.toml
pwcc/src/: codegen.rs  emitter.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  printer.rs  semantic.rs  span.rs  tacky.rs
pwcc/src/codegen/: hardware.rs  mod.rs  pseudo.rs  stack.rs
pwcc/src/codegen/pseudo/: mod.rs  test.rs
pwcc/src/emitter/: mod.rs
pwcc/src/lexer/: macros.rs  mod.rs  test.rs
pwcc/src/parser/: errors.rs  functor.rs  helpers.rs  macros.rs  mod.rs  test.rs  test_errors.rs  traits.rs
pwcc/src/printer/: errors.rs
pwcc/src/semantic/: goto.rs  ident_resolution.rs  loop_labeling.rs  mod.rs  operator_types.rs  storage_check.rs  switch_case_collection.rs  type_check.rs  variable_resolution.rs
pwcc/src/semantic/ident_resolution/: test.rs
pwcc/src/semantic/test/: goto.rs  ident_resolution.rs  mod.rs  (+3 more)
pwcc/src/tacky/: display.rs  mod.rs  with_symbol_table.rs
pwcc_bin/: Cargo.toml
pwcc_bin/src/: main.rs  stages.rs
pwcc_util/: Cargo.toml
pwcc_util/src/: box.rs  lib.rs  span.rs
pwcc_util/src/lexer/: mod.rs
pwcc_util/src/parser/: error.rs  helpers.rs  macros.rs  mod.rs  traits.rs
pwcc_util_macros/: Cargo.toml
pwcc_util_macros/src/: lib.rs
src/: codegen.rs  emitter.rs  lex.rs  lexer.rs  main.rs  parser.rs  printer.rs  tacky.rs
src/codegen/: hardware.rs  pseudo.rs  stack.rs
src/parser/: macros.rs
src/printer/: errors.rs
