[package]
name = "functional_macros"
version = "0.0.7"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["foldable", "functor", "try-functor", "visit", "visit-mut"]
foldable = []
functor = []
try-functor = ["functor"]
visit = []
visit-mut = ["visit"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = [
  "clone-impls",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
  "visit-mut",
]
