[package]
name = "functional_macros"
version = "0.0.7"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["foldable", "foldable-mut", "functor", "try-functor", "visit", "visit-mut"]
foldable = []
foldable-mut = []
functor = []
try-functor = ["functor"]
visit = ["foldable"]
visit-mut = ["foldable-mut"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = [
  "clone-impls",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
  "visit-mut",
]
