[package]
name = "pwcc_util_macros"
version = "0.0.10"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = [
  "clone-impls",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
  "visit-mut",
]
